; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ctxfi/extr_ctdaio.c_dai_rsc_uninit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ctxfi/extr_ctdaio.c_dai_rsc_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dai = type { i32, i32*, i64 }
%struct.hw = type { i32 (i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dai*)* @dai_rsc_uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dai_rsc_uninit(%struct.dai* %0) #0 {
  %2 = alloca %struct.dai*, align 8
  store %struct.dai* %0, %struct.dai** %2, align 8
  %3 = load %struct.dai*, %struct.dai** %2, align 8
  %4 = getelementptr inbounds %struct.dai, %struct.dai* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = inttoptr i64 %5 to %struct.hw*
  %7 = getelementptr inbounds %struct.hw, %struct.hw* %6, i32 0, i32 0
  %8 = load i32 (i32*)*, i32 (i32*)** %7, align 8
  %9 = load %struct.dai*, %struct.dai** %2, align 8
  %10 = getelementptr inbounds %struct.dai, %struct.dai* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = call i32 %8(i32* %11)
  %13 = load %struct.dai*, %struct.dai** %2, align 8
  %14 = getelementptr inbounds %struct.dai, %struct.dai* %13, i32 0, i32 1
  store i32* null, i32** %14, align 8
  %15 = load %struct.dai*, %struct.dai** %2, align 8
  %16 = getelementptr inbounds %struct.dai, %struct.dai* %15, i32 0, i32 2
  store i64 0, i64* %16, align 8
  %17 = load %struct.dai*, %struct.dai** %2, align 8
  %18 = getelementptr inbounds %struct.dai, %struct.dai* %17, i32 0, i32 0
  %19 = call i32 @daio_rsc_uninit(i32* %18)
  ret i32 0
}

declare dso_local i32 @daio_rsc_uninit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
